redis-ha/sentinel-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sentinel-proxy
  name: sentinel-proxy
spec:
  replicas: 6 #ilk olarak redis ve sentinel podlari up olmali. Sonrasinda app run edilmeli.
  selector:
    matchLabels:
      app: sentinel-proxy
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: sentinel-proxy
    spec:
      containers:
      - image: flaccid/redis-sentinel-proxy:latest
        name: redis-sentinel-proxy
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sentinel-proxy
  name: sentinel-proxy
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: sentinel-proxy
  type: LoadBalancer
