redis-ha/sentinel-proxy-ingress-routeTCP.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: redis-ingress-route
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - redis
  routes:
    - match: HostSNI(`*`)
      services:
        - name: sentinel-proxy
          port: 6379
